--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flame: ^1.7.3
   audioplayers: ^4.1.0
+  multiselect: ^0.1.0
 
 dev_dependencies:
   flutter_test:
